<resources>
    <string name="app_name">Музей Мирового океана</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Музей Янтаря</string>
    <string name="nav_header_subtitle">Пн-Пт 10:00-19:00 Сб-Вс 9:00-20:00</string>
    <string name="nav_header_desc">Головное меню</string>
    <string name="action_settings">Настройки</string>

<!--   review-->
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="average_rating">Рейтинг</string>
    <string name="add_review">Создать отзыв</string>



    <!-- INFO -->
        <string name="museum_info">Информация о музее</string>


        <string name="museum_about">Единственный в России Музей янтаря был открыт в 1979 году. Он расположен в центре Калининграда на берегу озера Верхнее в крепостной башне середины ХIХ века.\n\n

Башня была построена в 1853 году под руководством разработчика общего плана крепостных сооружений Кёнигсберга шефа инженерного корпуса Эрнста Людвига фон Астера и входила в систему городских оборонительных укреплений. Она носила имя прусского генерал-фельдмаршала Фридриха Карла Дона, участника освободительной войны против наполеоновского нашествия. Здание является также памятником Второй мировой войны.\n

Музей янтаря – это музей одного минерала. Экспозиция расположена на трех этажах здания общей площадью около 1000 кв. метров. По содержанию она делится на естественно-научную и культурно-историческую части.\n

Янтарь – это окаменевшая смола древних хвойных деревьев, произраставших более 40 млн. лет назад на современной территории Скандинавского полуострова и прилегающих к нему областях дна Балтийского моря.\n

В естественно-научном разделе собрания представлены различные по весу, цветовой гамме, степени прозрачности образцы янтаря. В экспозиции находится самый крупный в России «солнечный камень»: его вес – 4 кг 280 г. Значительную часть коллекции составляют образцы янтаря с включениями остатков животных и растительных организмов, попавших десятки миллионов лет назад в некогда жидкую и вязкую смолу. Включения в балтийском янтаре представляют большой научный интерес благодаря своему разнообразию и превосходной сохранности. Они ценны для уточнения наших знаний о флоре и фауне, а также климатических условиях на Земле 40 – 45 млн. лет назад. На сегодняшний день коллекция Калининградского музея янтаря является главным российским национальным фондом инклюзов в балтийском янтаре.</string>



        <string name="museum_address">Адрес музея: 236016, г. Калининград, пл. Маршала Василевского, 1.</string>


        <string name="museum_working_hours">Рабочие часы: Пн-Пт 10:00-19:00 Сб-Вс 9:00-20:00</string>


        <string name="privacy">© 2005 — 2023 ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ УЧРЕЖДЕНИЕ КУЛЬТУРЫ "КАЛИНИНГРАДСКИЙ ОБЛАСТНОЙ МУЗЕЙ ЯНТАРЯ". Все права защищены.</string>


        <string name="museum_contact_info">Контакты:\n
            тел./факс +7 (4012) 466-550, e-mail: office@ambermuseum.ru – приемная;\n
            тел./факс +7 (4012) 466-888, e-mail: info@ambermuseum.ru – отдел информации;\n
            тел./факс +7 (4012) 538-219, e-mail: visitor@ambermuseum.ru – заказ экскурсий.</string>


        <string name="app_info">Информация о приложении и авторе</string>


        <string name="app_description1">TMuseum AR - это приложение, которое поможет вам узнать больше об экспонатах, новостях и событиях музея с помощью дополненной реальности.</string>


        <string name="about_author">Об авторе: Сергей Мортано/Щукин, просто странный студент </string>


        <string name="contact_info">Контакты: mortanogc@gmail.com</string>


        <string name="app_version">Версия: 1.1.2</string>

<!--permission-->
<string name="permissions_not_granted">Не все разрешения выданы</string>

    <string name="hello_blank_fragment">Привет в пустой бланк, как ты сюда попал?</string>

        <!-- ... -->
        <string name="welcome">Добро пожаловать в Museum AR!</string>
        <string name="app_description">Museum AR - это приложение, которое поможет вам узнать больше об экспонатах, новостях и событиях музея с помощью дополненной реальности. Путешествуйте по музею, открывайте новые экспонаты и делитесь своими отзывами!\n</string>
        <string name="app_description_2">Данное приложение было создано специально для курсовой работы и является частью крупного проекта</string>
<!--   отзывы     -->
    <string name="fullscreen_image_content_description">Полноэкранное изображение</string>


<!--    Settings    -->
    <string name="nav_home">Начало</string>
    <string name="nav_news">Новости</string>
    <string name="nav_tickets">Билеты</string>
    <string name="nav_map">Карта музея</string>
    <string name="nav_about_museum">О музее</string>
    <string name="nav_account">Аккаунт</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_about_app">О приложении</string>

    <string name="select_language">Выбор языка</string>
    <string name="select_theme">Выбор темы</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="request_permissions">Перезапрос разрешений</string>
    <string name="settings_applied">Новые параметры применены</string>
    <string name="settings_saved">Положение сохранено</string>
    <string name="permissions_granted">Все разрешения уже выданы</string>
    <string name="cache_size">Размер кеша:</string>
    <string name="clear_cache">Очистить кеш</string>
    <string-array name="language_options">
        <item>По умолчанию системы</item>
        <item>Английский</item>
        <item>Русский</item>
    </string-array>
    <string-array name="theme_options">
        <item>По умолчанию системы</item>
        <item>Светлая</item>
        <item>Темная</item>
    </string-array>
    <string name="nav_reviews">Отзывы</string>
    <string name="nav_menu">Меню</string>
    <string name="nav_exhibits">Экспонаты</string>
    <string name="exhibit_details">Детали экспоната</string>
    <string name="location_not_available">Местоположение недоступно</string>
    <string name="location_permission_denied">Разрешение на доступ к местоположению отклонено</string>

    <string name="go_to_map">Перейти на карты</string>


        <string name="login">Войти</string>
        <string name="register">Регистрация</string>
        <string name="forgot_password">Забыли пароль?</string>
        <string name="first_name">Имя</string>
        <string name="last_name">Фамилия</string>
        <string name="email">Электронная почта</string>
        <string name="password">Пароль</string>
        <string name="change_password">Сменить пароль</string>
        <string name="logout">Выйти</string>
        <string name="login_successful">Вход выполнен успешно</string>
        <string name="login_failed">Ошибка входа: %1$s</string>
        <string name="registration_failed">Ошибка регистрации: %1$s</string>
        <string name="user_registered_successfully">Пользователь успешно зарегистрирован</string>
        <string name="error_saving_user">Ошибка сохранения пользователя: %1$s</string>
        <string name="user_data_not_found">Данные пользователя не найдены</string>
        <string name="error_loading_user_data">Ошибка загрузки данных пользователя: %1$s</string>
        <string name="logged_out">Вы вышли</string>
        <string name="password_reset_email_sent">Письмо для сброса пароля отправлено</string>
    <string name="email_required">Требуется Email</string>
    <string name="password_required">Требуется пароль</string>
    <string name="last_name_required">Требуется фамилия</string>
    <string name="first_name_required">Требуется имя</string>
    <string name="error">Ошибка</string>
    <string name="new_password">Новый пароль</string>
    <string name="update_name">Обновить имя</string>
    <string name="current_password">Текущий Пароль</string>
    <string name="name">Имя</string>
    <string name="reauthentication_failed">Ошибка повторной аутентификации: </string>
    <string name="error_changing_password">Ошибка изменения пароля: </string>
    <string name="password_changed_successfully">Пароль успешно изменен</string>
    <string name="name_updated_successfully">Имя успешно обновлено</string>
    <string name="error_updating_name">Ошибка обновления имени: </string>
    <string name="change_email">Изменить почту</string>
    <string name="new_email">Новая электронная почта</string>
    <string name="error_changing_email">Ошибка при изменении адреса электронной почты: </string>
    <string name="email_updated_successfully">Адрес электронной почты успешно обновлен</string>
    <string name="error_updating_email">Ошибка при обновлении адреса электронной почты: </string>
    <string name="login_account">Вход в аккаунт</string>
    <string name="register_account">Регистрация нового аккаунта</string>

    <string name="your_name">Ваше имя</string>
    <string name="review_title">Краткий отзыв</string>
    <string name="your_review">Ваш отзыв</string>
    <string name="your_rating">Ваша оценка</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="submit_review">Отправить отзыв</string>
    <string name="anonymous">Анонимно</string>
    <string name="review_submitted_for_approval">Отзыв отправлен на рассмотрение</string>
    <string name="error_submitting_review">Ошибка при отправке отзыва</string>
    <string name="edit_review">Редактировать отзыв</string>
    <string name="delete_review">Удалить отзыв</string>



    <string name="permission_required">Для выбора изображения требуется разрешение на доступ к галерее</string>
    <string name="fill_all_fields">Пожалуйста, заполните все поля</string>
    <string name="error_loading_image">Ошибка загрузки изображения</string>
    <string name="review_submitted_for_review">Отзыв отправлен на рассмотрение</string>
    <string name="review_updated">Отзыв успешно обновлен</string>
    <string name="error_updating_review">Ошибка обновления отзыва</string>


    <string name="anonymous_review">Анонимный отзыв</string>
    <string name="update_review">Обновить отзыв</string>
    <string name="review_updated_successfully">Отзыв успешно обновлен</string>
    <string name="error_loading_reviews">Ошибка загрузки отзывов</string>
    <string name="error_loading_review">Ошибка загрузки отзыва</string>
    <string name="short_review">Краткий отзыв</string>
    <string name="museum_rating">Рейтинг музея</string>

    <string name="confirm_delete_title">Подтвердите удаление</string>
    <string name="confirm_delete_message">Вы уверены, что хотите удалить этот отзыв?</string>
    <string name="review_deleted">Отзыв успешно удален.</string>
    <string name="error_deleting_review">Ошибка при удалении отзыва. Пожалуйста, попробуйте еще раз.</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>

</resources>